# otus_cpp_professional

./: .gitignore  CMakeLists.txt  Circle.cpp  Circle.h  Document.cpp  Document.h  Rectangle.cpp  Rectangle.h  Shape.h  file_utils.cpp  implementation.cpp  initializer.cpp  interface.h  leaders_followers.h  lib.h  logger.cpp  main.cpp  main_test.cpp  matrix.h  myAllocator.h  myMap.h  utils.cpp  utils.h  waiter.cpp  waiter.h
.github/workflows/: c-cpp.yml  cmake-multi-platform.yml  cmake-single-platform.yml
home_work_1/: CMakeLists.txt  main.cpp
hw1/: CMakeLists.txt  main.cpp
lesson_1/: CMakeLists.txt  lib.cpp  main_test.cpp
lesson_2/: CMakeLists.txt  ipAddres.h  main.cpp  version.h.in
lib/: CMakeLists.txt  async.cpp  async.h
